@@ -17,19 +17,21 @@ domainDirections(files, param, width=50000, span=10)
 
 \details{
 The genome is partitioned into bins of size \code{width}.
-For each bin, this function computes the total count for all bin pairs involving that bin and the \code{span} upstream bins.
-This is repeated for the \code{span} downstream bins.
-If multiple \code{files} are specified, the total of the averages across all libraries for each bin pair is computed instead.
+For each bin, this function computes the total number of read pairs between that bin and the \code{span} upstream bins.
+This is repeated for the \code{span} downstream bins, thus yielding two counts (up and down) per bin.
 
-The total up- and downstream counts are returned in the \code{Up} and \code{Down} fields of the output GRanges object.
-This can be used to compute a directionality statistic, e.g., as defined by Dixon et al, or by computing the log-fold change between fields.
-The latter is easier to compute and model with a Gaussian distribution.
-In any case, the directionalities can be used in a HMM to identify domains - see the user's guide for more details.
+A RangedSummarizedExperiment is returned containing the coordinates of each bin and two matrices of counts, named \code{"up"} and \code{"down"}.
+Each row of the matrix corresponds to a bin, while each column corresponds to a library in \code{files}.
+Each entry of the matrix stores the total count of read pairs to upstream or downstream bins.
+
+The total up- and downstream counts can be used to compute a directionality statistic, e.g., as defined by Dixon et al, or by computing the log-fold change between fields.
+Alternatively, it can be used to identify differential domains - see the user's guide for more details.
 }
 
 \value{
-A GRanges object with one entry for each bin in the genome.
-The \code{Up} and \code{Down} fields in the metadata contain the total average count for the up-/downstream interactions involving each bin.
+A RangedSummarizedExperiment object with one row for each bin in the genome.
+It contains two integer matrices named \code{"up"} and \code{"down"}, containing the counts to upstream and downstream bins respectively.
+It also contains the total number of read pairs in each library in the \code{totals} of the column metadata.
 }
 
 \seealso{
@@ -54,14 +56,15 @@ invisible(preparePairs(hic.file, param, file=fout))
 # Not really that informative; see user's guide.
 out <- domainDirections(fout, param, width=10)
 out
-domainDirections(fout, param, width=10, span=1)
 
 # Calculating directionality log-FC with a large prior.
-dir.logFC <- log2((out$Up+10)/(out$Down+10))
+up.counts <- assay(out, "up")
+down.counts <- assay(out, "down")
+dir.logFC <- log2((up.counts+10)/(down.counts+10))
 dir.logFC
 
 # Calculating directionality index with Dixon's method.
-dixon.stat <- sign(out$Up-out$Down)*2*((out$Up-out$Down)/(out$Up+out$Down))^2
+dixon.stat <- sign(up.counts-down.counts)*2*((up.counts-down.counts)/(up.counts+down.counts))^2
 dixon.stat
 
 \dontshow{
